--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,30 +1,47 @@
-version: '3.8'
-
 services:
-  web:
+  mysql:
+    image: mysql
+    env_file: .env
+    container_name: db
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - app_network
+
+  app:
     build: .
+    container_name: link_saver_api
+    env_file: .env
+    environment:
+      - DB_URL=mysql+aiomysql://${DB_USER}:${DB_PASSWORD}@mysql:3306/${DB_NAME}
     ports:
       - "8000:8000"
     volumes:
-      - .:/app
-    environment:
-      - DATABASE_URL=mysql+pymysql://user:password@db:3306/mydatabase
+      - ./app:/app  # Монтируем код для hot-reload
+      # - ./alembic:/app/alembic
     depends_on:
-      - db
-    restart: unless-stopped
-
-  db:
-    image: mysql:8.0
-    ports:
-      - "3306:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: mydatabase
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
-    volumes:
-      - mysql_data:/var/lib/mysql
-    restart: unless-stopped
-
+      mysql:
+        condition: service_healthy
+    networks:
+      - app_network
+    command: >
+      sh -c "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
+    # alembic upgrade head && 
 volumes:
   mysql_data:
+
+networks:
+  app_network:
+    driver: bridge
