--- a/link_api/Dockerfile
+++ b/link_api/Dockerfile
@@ -1,4 +1,8 @@
-FROM python:3.13.5-slim
+FROM python:3.13-slim
+
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+ENV PYTHONPATH=/
 
 WORKDIR /app
 
@@ -6,11 +10,14 @@ WORKDIR /app
 # Устанавливаем curl для healthcheck
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY ./pyproject.toml ./poetry.lock ./
+
+
+RUN pip install --no-cache-dir poetry==2.3.1
+
+RUN poetry config virtualenvs.create false  \
+    && poetry install --no-interaction --no-ansi --without dev --no-root
 
 COPY ./app/ .
 
-ENV PYTHONPATH=/
-
-CMD ["python", "main.py"]
+#CMD ["python", "main.py"]
