--- a/link_api/pyproject.toml
+++ b/link_api/pyproject.toml
@@ -15,7 +15,12 @@ dependencies = [
     "pydantic-settings (>=2.12.0,<3.0.0)",
     "asyncpg (>=0.31.0,<0.32.0)",
     "psycopg (>=3.3.2,<4.0.0)",
-    "sqladmin (>=0.23.0,<0.24.0)"
+    "sqladmin (>=0.23.0,<0.24.0)",
+    "python-jose (>=3.5.0,<4.0.0)",
+    "email-validator (>=2.3.0,<3.0.0)",
+    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
+    "itsdangerous (>=2.2.0,<3.0.0)",
+    "pyright[nodejs] (>=1.1.408,<2.0.0)",
 ]
 
 
@@ -30,5 +35,28 @@ dev = [
     "mypy (>=1.19.1,<2.0.0)",
     "black (>=26.1.0,<27.0.0)",
     "pytest-asyncio (>=1.3.0,<2.0.0)",
-    "pytest-cov (>=7.0.0,<8.0.0)"
+    "pytest-cov (>=7.0.0,<8.0.0)",
+    "autoflake (>=2.3.1,<3.0.0)",
+    "isort (>=7.0.0,<8.0.0)",
+    "pyright (>=1.1.408,<2.0.0)"
 ]
+
+[tool.black]
+line-length = 88
+target-version = ['py313']
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+line_length = 88
+
+[tool.autoflake]
+check_diff = true
+imports = ["sqlalchemy", "app"]
+
+[tool.pyright]
+include = ["app"]
